--- a/css/default.css
+++ b/css/default.css
@@ -1,10 +1,23 @@
-html {
-	background-color: #211811;
-	color: white;
-	}
+
+body {
+	margin: auto;
 	
-body{
+}
+header {
 	font-family: liquor-store, sans-serif;
 	font-style: normal;
 	font-weight: 400;
+	background-image:url(../assets/afbg.png);
+	color: white;
+}
+h1 {
+	position: relative: top: 1110px; left: 350px;
+}
+#logo {
+	position: relative; top: -34px; left: 140px;
+}
+
+h1{
+	font-size: 4em;
+	width: 800px;
 }
